/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package core.net.sequences;

option java_package = "com.subterranean_security.crimson.proto.core.net.sequences";

import "com/subterranean_security/crimson/core/Generator.proto";

message RQ_Generate {
	core.ClientConfig internal_config = 1;
	int32 send_to_cid = 2;
}

message RS_Generate {
	core.GenReport report = 1;
	bytes installer = 2;
}